--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">tes_kotlin</string>
+    <string name="login_text">Hello World</string>
+    <string name="login_button_text">Click me</string>
+    <string name="login_button_clicked_text">Have a nice day !</string>
 </resources>
